juiceshop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: juiceshop-site
  namespace: juiceshop-site
spec:
  replicas: 3
  selector:
    matchLabels:
      app: juiceshop-site
  template:
    metadata:
      labels:
        app: juiceshop-site
    spec:
      containers:
      - name: juiceshop-site
        image: bkimminich/juice-shop
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
