juiceshop-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: juiceshop-site
  namespace: juiceshop-site
spec:
  selector:
    app: juiceshop-site
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: http
