juiceshop-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-modsecurity: \"true\"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecRequestBodyAccess On
      SecAuditEngine RelevantOnly
      SecAuditLogParts ABIJDEFHZ
      SecAuditLog /var/log/modsec_audit.log
      SecRule REQUEST_HEADERS:User-Agent \"fern-scanner\" \"log,deny,id:107,status:403,msg:\'Fern Scanner Identified\'\"
  name: juiceshop-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: juiceshop-site
          servicePort: 80
        path: /juiceshop
